--- a/css/AboutUs.css
+++ b/css/AboutUs.css
@@ -51,10 +51,10 @@
 }
 
 .member-img {
-    margin-left: -50px;
-    width: 150%;
-    width: 150%;
-    object-fit: contain;
+    /* margin-left: -50px; */
+    width: 100%;
+    height: 100%;
+
 }
 
 .contact-container {
